# CodeCheck

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  pilots_operating_handbook_emb1.html  shell.nix  web.sh
analysis/: Cargo.toml
analysis/examples/dynamic/: main.rs
analysis/examples/java/: main.rs
analysis/examples/java/dataset/case-01/: dataset.json
analysis/examples/java/string_tokenisation/: Cargo.toml
analysis/examples/java/string_tokenisation/src/: codesight.rs  match.rs  signature.rs  token.rs  tokenisation.rs
analysis/outputs/: output.csv
analysis/src/: c.rs  cpp.rs  java.rs  lib.rs
ast/: Cargo.toml
ast/examples/java/: main.rs
ast/src/: c.rs  cpp.rs  java.rs  lib.rs  main.rs
auth/: Cargo.toml
auth/src/: basic.rs  lib.rs  saml.rs
db/: Cargo.toml
db/src/: lib.rs  models.rs
label/: package.json  pnpm-lock.yaml  tailwind.config.js
label/src-tauri/: Cargo.toml  tauri.conf.json
label/src-tauri/src/: lib.rs
label/src/lib/: index.ts
label/src/lib/components/: Button.svelte  CodeViewer.svelte  Error.svelte  LineNumbers.svelte  Link.svelte
label/src/routes/: +page.svelte
label/src/routes/items/: +page.svelte
label/src/routes/items/[slug]/: +page.svelte  +page.ts
label/src/routes/items/view/: +page.svelte  +page.ts
lang-translate/: gemini.py  test.py
lang-translate/input/dataset/case-01/: dataset.json
lang-translate/output/dataset/case-01/non-plagiarized/05/: T01.py
lang-translate/output/dataset/case-01/non-plagiarized/07/: Main.py
lang-translate/output/dataset/case-01/non-plagiarized/09/: t01.py
lang-translate/output/dataset/case-01/non-plagiarized/11/: T01.py
lang-translate/output/dataset/case-01/non-plagiarized/13/: No1.py
lang-translate/output/dataset/case-01/non-plagiarized/14/: Soal1.py
lang-translate/output/dataset/case-01/non-plagiarized/15/: T01.py
lang-translate/output/dataset/case-02/non-plagiarized/01/: T02.py
lang-translate/output/dataset/case-02/non-plagiarized/03/: Nomor2_2451041557A22145B3701B0184109CAB013.py
lang-translate/output/dataset/case-02/non-plagiarized/04/: T02.py
lang-translate/output/dataset/case-02/non-plagiarized/05/: T02.py
lang-translate/output/dataset/case-02/non-plagiarized/06/: T02.py
lang-translate/output/dataset/case-02/non-plagiarized/07/: Main.py
lang-translate/output/dataset/case-02/non-plagiarized/08/: T02.py
lang-translate/output/dataset/case-02/non-plagiarized/09/: t02.py
lang-translate/output/dataset/case-02/non-plagiarized/10/: Main.py
lang-translate/output/dataset/case-02/non-plagiarized/11/: T02.py
lang-translate/output/dataset/case-02/non-plagiarized/12/: T02.py
lang-translate/output/dataset/case-02/non-plagiarized/13/: No2.py
lang-translate/output/dataset/case-02/non-plagiarized/14/: Soal2.py
lang-translate/output/dataset/case-03/non-plagiarized/01/: T03.py
lang-translate/output/dataset/case-03/non-plagiarized/02/: T03.py
lang-translate/output/dataset/case-03/non-plagiarized/03/: Nomor3_2451041557A22145B3701B0184109CAB013.py
lang-translate/output/dataset/case-03/non-plagiarized/04/: T03.py
lang-translate/output/dataset/case-03/non-plagiarized/05/: T03.py
lang-translate/output/dataset/case-03/non-plagiarized/06/: T03.py
lang-translate/output/dataset/case-03/non-plagiarized/07/: Main.py
lang-translate/output/dataset/case-03/non-plagiarized/08/: T03.py
lang-translate/output/dataset/case-03/non-plagiarized/09/: t03.py
lang-translate/output/dataset/case-03/non-plagiarized/10/: Main.py
lang-translate/output/dataset/case-03/non-plagiarized/11/: T03.py
lang-translate/output/dataset/case-03/non-plagiarized/12/: T03.py
lang-translate/output/dataset/case-03/non-plagiarized/13/: No3.py
lang-translate/output/dataset/case-03/non-plagiarized/15/: T03.py
lang-translate/output/dataset/case-03/original/: T3.py
lang-translate/output/dataset/case-04/non-plagiarized/01/: T04.py
lang-translate/output/dataset/case-04/non-plagiarized/02/: T04.py
lang-translate/output/dataset/case-04/non-plagiarized/03/: Nomor4_2451041557A22145B3701B0184109CAB013.py
lang-translate/output/dataset/case-04/non-plagiarized/04/: T04.py
lang-translate/output/dataset/case-04/non-plagiarized/05/: T04.py
lang-translate/output/dataset/case-04/non-plagiarized/06/: T04.py
lang-translate/output/dataset/case-04/non-plagiarized/08/: T04.py
lang-translate/output/dataset/case-04/non-plagiarized/09/: t04.py
lang-translate/output/dataset/case-04/non-plagiarized/10/: Main.py
lang-translate/output/dataset/case-04/non-plagiarized/11/: T04.py
lang-translate/output/dataset/case-04/non-plagiarized/12/: T04.py
lang-translate/output/dataset/case-04/non-plagiarized/13/: No4.py
lang-translate/output/dataset/case-04/non-plagiarized/14/: Soal4.py
lang-translate/output/dataset/case-04/non-plagiarized/15/: T04.py
lang-translate/output/dataset/case-04/original/: T4.py
lang-translate/output/dataset/case-05/non-plagiarized/01/: T05.py
lang-translate/output/dataset/case-05/non-plagiarized/02/: T05.py
lang-translate/output/dataset/case-05/non-plagiarized/03/: Nomor5_2451041557A22145B3701B0184109CAB013.py
lang-translate/output/dataset/case-05/non-plagiarized/04/: T05.py
lang-translate/output/dataset/case-05/original/: T5.py
lang-translate/output/dataset/case-06/original/: T6.py
lang-translate/output/dataset/case-07/original/: T7.py
loss-func/: Cargo.toml  giou  giou.rs
loss-func/src/: giou  giou.rs  giou_tensor.rs  main.rs  test.py  totest.txt
macros/: Cargo.toml
macros/src/: lib.rs
neural/: Cargo.toml  out.txt
neural/src/: batch.rs  contrastive.rs  data.rs  elu.rs  gat.rs  giou_tensor.rs  lib.rs  loss.rs  main.rs  model.rs  node_process.rs
neural/src/gat/: layer.rs  mod.rs
outputs/: output.csv
plagiarism/: Cargo.toml
storage/src/: lib.rs  serverfilesys.rs
util/: Cargo.toml
util/src/: lib.rs
vocareum/: Cargo.toml
vocareum/src/: vocareum.rs
web/: Cargo.toml
web/src/: admin.rs  app.rs  jobs.rs  lib.rs  login.rs  main.rs  setup.rs
web/src/home/: mod.rs  sidebar.rs
web/style/: main.scss
(+358 files in other folders)
