[workspace]
members = [
    "analysis",
    "web",
    "util",
    "db",
    "auth",
    "storage",
    "macros",
    "neural",
    "label/src-tauri",
    "ast",
]
resolver = "2"
# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.release]
codegen-units = 1
lto = "fat"
