[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antlr-rust = "0.3.0-beta"
anyhow = "1.0.75"
lazy_static = "1.4.0"
regex = "1.9.5"
syntree = "0.14.5"
thiserror = "1.0.48"
macros = { path = "../macros" }
nalgebra = "0.32.3"
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.28"
async-recursion = "1.0.5"
async-trait = "0.1.73"
rayon = "1.8.0"

[dev-dependencies]
indicatif = { version = "0.17.7", features = ["improved_unicode"] }
