[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
regex = "1.9.5"
syntree = "0.14.5"
thiserror = "1.0.48"
nalgebra = "0.32.3"
rayon = "1.8.0"
uuid = { version = "1.7.0", features = ["fast-rng", "v4"] }
fxhash = "0.2.1"
burn = "0.13.2"

[dev-dependencies]
glob = "0.3.1"
indicatif = { version = "0.17.7", features = ["improved_unicode"] }
