[package]
name = "ast"
version = "0.1.0"
edition = "2021"

[dependencies]
antlr-rust = "0.3.0-beta"
anyhow = "1.0.86"
burn = { git = "https://github.com/tracel-ai/burn.git" }
macros = { path = "../macros" }
regex = "1.10.6"
syntree = "0.17.2"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.63"
