[package]
name = "ast"
version = "0.1.0"
edition = "2021"

[dependencies]
antlr-rust = "0.3.0-beta"
anyhow = "1.0.90"
burn = { git = "https://github.com/tracel-ai/burn.git", features = ["wgpu"] }
macros = { path = "../macros" }
regex = "1.11.0"
syntree = "0.17.5"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.64"
