[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
basic_auth = []
# Allows for separation between client and server features
# Server features are always a superset of client features
server = ["dep:mongodb", "db/server", "dep:goldleaf", "dep:actix-web"]

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.82"
mongodb = { version = "2.8.2", features = ["bson-chrono-0_4"], optional = true }
thiserror = "1.0.63"
db = { path = "../db" }
goldleaf = { version = "0.1.4", optional = true }
chrono = "0.4.38"
argon2 = "0.5.3"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
actix-web = { version = "4.9.0", optional = true }
