[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
saml_auth = []
basic_auth = []

[dependencies]
anyhow = "1.0.75"
bson = { version = "2.7.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.31", features = ["serde"] }
goldleaf = "0.1.4"
mongodb = "2.7.0"
serde = { version = "1.0.190", features = ["derive"] }
uuid = { version = "1.5.0", features = ["serde"] }
