[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
basic_auth = []
server = ["dep:mongodb", "dep:goldleaf"]

[dependencies]
anyhow = "1.0.86"
bson = { version = "2.11.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
goldleaf = { version = "0.1.4", optional = true }
mongodb = {version = "2.8.2", optional = true}
serde = { version = "1.0.209", features = ["derive"] }
uuid = { version = "1.10.0", features = ["serde"] }
