[package]
name = "neural"
version = "0.1.0"
edition = "2021"

[features]
default = ["train"]
train = ["burn/train"]

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", features = [
    "dataset",
    "wgpu",
] }
syntree = "0.17.4"
util = { path = "../util" }
ast = { path = "../ast" }
itertools = "0.13.0"
walkdir = "2.5.0"
thiserror = "1.0.63"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
clap = { version = "4.5.18", features = ["derive"] }
ndarray = "0.16.0"
