[package]
name = "neural"
version = "0.1.0"
edition = "2021"

[features]
default = ["train"]
train = ["burn/train"]

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", features = [
    "dataset",
    "wgpu",
] }
syntree = "0.17.5"
util = { path = "../util" }
ast = { path = "../ast" }
itertools = "0.13.0"
walkdir = "2.5.0"
thiserror = "1.0.64"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
clap = { version = "4.5.20", features = ["derive"] }
ndarray = "0.16.1"
num_cpus = "1.16.0"
